# cpp_sandbox

./: .gitmodules  CMakeLists.txt  README.md
alocator/: CMakeLists.txt  custom_allocator.cpp  custom_allocator.hpp  main.cpp  static_allocator.cpp  static_allocator.hpp
cexperments/: CMakeLists.txt  main.c  obj.c  obj.h
cobs/: CMakeLists.txt  chunking.cpp  chunking.hpp  framing.cpp  framing.hpp  main.cpp  sample_enc_dec.cpp  sample_enc_dec.hpp
cobs/framing/: README.md  framing.cpp  framing.h  framing.hpp  types.h  wrapper.cpp
common/debug/: log_libs.c  log_libs.h
config/: common.cmake  utils.cmake
dispemu/: CMakeLists.txt  README.md  main.cpp
entry_point/: CMakeLists.txt  entry_point.cpp  entry_point.h  main.cpp  main.h
flowcontrol/: CMakeLists.txt  main.c
flowcontrol/scripts/: sender.py
fltk_test/: CMakeLists.txt  README.MD  main.cpp
glem_demo/: CMakeLists.txt  README.MD  main.cpp
imgui_test/: CMakeLists.txt  main.cpp  mydemo.cpp
imgui_test/x11backend/: imgui_impl_x11.cpp
libs/: libs.cmake
libs/CapacityMeter/: Battery.hpp  CMeter.cpp  CMeter.hpp
libs/CapacityMeter/battery/: Profile.hpp
libs/CapacityMeter/measurement/: IDevice.hpp
libs/debug/: log_libs.c
qmeter/: CMakeLists.txt  main.cpp
qmeter/impl/: CMeterImpl.hpp
sanbox/: CMakeLists.txt  bitarray.cpp  bitarray.hpp  main.cpp
scripts/socket_server/: connector.py  framing.py  konn_proxy.py  main.py  requirements.txt  sender.py  service_connection.py
sockets/: README.MD
sockets/client/: CMakeLists.txt  main.cpp
sockets/server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/cmeter/: CMakeLists.txt  main.cpp
test/sandox/array/: CMakeLists.txt  main.cpp  print.cpp  print.hpp
